@@ -63,7 +63,7 @@ void
 PolarInfo::Init()
 {
   v1 = v2 = v3 = w1 = w2 = w3 = fixed_zero;
-  reference_mass = max_ballast = wing_area = v_no = fixed_zero;
+  reference_mass = dry_mass = max_ballast = wing_area = v_no = fixed_zero;
   name = NULL;
 }
 
@@ -80,6 +80,7 @@ PolarInfo::CopyIntoGlidePolar(GlidePolar &polar) const
 
   // Glider empty weight
   polar.reference_mass = reference_mass;
+  polar.dry_mass = (positive(dry_mass) ? dry_mass : reference_mass);
   // Ballast weight
   polar.ballast_ratio = max_ballast / polar.reference_mass;
 
@@ -154,6 +155,7 @@ PolarInfo::ReadString(const TCHAR *line)
   polar.w3 = fixed(_tcstod(p + 1, &p));
   polar.wing_area = (*p != _T(',')) ? fixed_zero : fixed(_tcstod(p + 1, &p));
   polar.v_no = (*p != _T(',')) ? fixed_zero : fixed(_tcstod(p + 1, &p));
+  polar.dry_mass = fixed_zero;
 
   *this = polar;
 
