@@ -47,6 +47,7 @@ extern const TCHAR szProfileWeatherStations[];
 extern const TCHAR szProfileSafetyAltitudeArrival[];
 extern const TCHAR szProfileSafetyAltitudeTerrain[];
 extern const TCHAR szProfileSafteySpeed[];
+extern const TCHAR szProfileDryMass[];
 extern const TCHAR szProfilePolarID[];
 extern const TCHAR szProfilePolar[];
 extern const TCHAR szProfilePolarName[];
